# PyCompiler-ARK-Professional

./: .env.example  .gitignore  .pre-commit-config.yaml  .swp  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_REVIEW_NOTES.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  SEGFAULT_FIX_SUMMARY.md  SUPPORTED_MATRIX.md  WebPageLauncher.py  constraints.txt  dialog_creator.py  ideas.md  index.html  launch.py  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh  tests_launch.sh  validate.py
.github/workflows/: ci.yml  release.yml
.pref/: pycompiler_gui_prefs.json  system_preferences.json
API/Hash Report/: __init__.py
API/cleaner/: __init__.py
API/code_signing/: __init__.py
API/compress_zip/: __init__.py
API/header_injector/: __init__.py
API/presence_check/: __init__.py
API/pyarmor/: __init__.py
API/sbom_generator/: __init__.py
API_SDK/: __init__.py  config.py  context.py  progress.py
API_SDK/ACASL_SDK/: __init__.py
API_SDK/BCASL_SDK/: __init__.py
Core/: MainWindow.py  __init__.py  allversion.py  ark_config_loader.py  auto_plugins.py  compatibility.py  compiler.py  dependency_analysis.py  dialogs.py  i18n.py  init_ui.py  preferences.py  sys_dependency.py  sys_deps.py  venv_manager.py  worker.py
Core/Auto_Command_Builder/: __init__.py  auto_build.py
Core/Compiler/: __init__.py  ark_config_loader.py  compiler.py  mainprocess.py  process_killer.py
Core/Venv_Manager/: Manager.py  __init__.py
Core/compiler/: __init__.py  compiler.py  process_killer.py
Core/dependency_analysis/: __init__.py  analyser.py
Core/deps_analyser/: __init__.py  analyser.py
Core/engines_loader/: __init__.py  base.py  registry.py  validator.py
Core/schemas/: mapping.schema.json
ENGINES/cx_freeze/: __init__.py  engine.py  mapping.json
ENGINES/nuitka/: __init__.py  auto_plugins.py  engine.py  nuitka_engine.py
ENGINES/pyinstaller/: __init__.py  auto_plugins.py  engine.py  pyinstaller_engine.py
Plugins/AdvancedStatistic/: __init__.py
Plugins/Cleaner/: __init__.py
Plugins/Packaging/: __init__.py
Plugins/cleaner/: __init__.py
Plugins/example_acasl/: __init__.py
Plugins_SDK/: README.md  __init__.py  config.py  context.py  dialog_creator.py  progress.py
Plugins_SDK/ACASL_SDK/: __init__.py
Plugins_SDK/BCASL_SDK/: __init__.py
Tests/: __init__.py  conftest.py  test_allversion.py  test_ark_config_loader_deep_and_getters.py  test_ark_config_loader_exclusion_and_default_create.py  test_base_pluginmeta.py  test_base_precompilecontext_iter_files.py  test_bcasl_config.py  test_bcasl_loader.py  test_bcasl_workspace_config_extended.py  test_compatibility.py  test_core_ark_config_loader.py  test_dialog_main_thread.py  test_general_context_compatibility.py  test_loader_misc_noops.py  test_loader_timeout_and_run_paths.py  test_loader_workspace_config_edge_cases.py  test_plugin_compatibility.py  test_plugin_sdk_versions.py  test_sdk_compatibility.py  workspace_support.py
WebPage/: WebPageLauncher.py  main.html
acasl/: Base.py  Loader.py  __init__.py  acasl.py  acasl_loader.py  dialog_creator.py  executor.py  tagging.py
bcasl/: Base.py  Loader.py  __init__.py  bcasl.py  bcasl_loader.py  dialog_creator.py  executor.py  tagging.py  tags_ordainer.py  validator.py
cesl/: Base.py  __init__.py
docs/: ARK_Configuration.md  About_Sdks.md  BCASL_Configuration.md  UPGRADE_GUIDE.md  about_sdks.md  how_to_create_a_BC_plugin.md  how_to_create_a_bcasl_API.md  how_to_create_a_bcasl_plugin.md  how_to_create_a_building_engine.md  how_to_create_an_acasl_API.md  how_to_create_an_acasl_plugin.md  how_to_create_an_engine.md  how_to_create_theme .md
engine_sdk/: Sys_Deps.py  __init__.py  auto_build_command.py  auto_plugins.py  base.py  i18n.py  sysdep.py  utils.py
languages/: af.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  ru.json  zh-CN.json
themes/: Techno.qss  Techno2.qss  aurora_borealis.qss  dark.qss  dark_malvolent_shrine.qss  divine_blue.qss  divine_rosas_dream.qss  divory.qss  ivory_luxury.qss  light.qss  sunshine.qss  tech_green.qss
ui/: ui_design.ui  ui_design_improved.ui
utils/: __init__.py  auto_plugins.py  compiler.py  dependency_analysis.py  dialogs.py  i18n.py  init_ui.py  preferences.py  sys_dependency.py  venv_manager.py  worker.py
(+63 files in other folders)
